# agent-prism

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pytest.ini
.claude/: launch.json
.github/workflows/: ci.yml
.zcode/plans/: plan-sess_9a04dad1-9c77-4e22-a2ef-770125fe1970.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py  models.py  storage.py
backend/app/adapters/: base.py  common.py  langchain_adapter.py  langgraph_adapter.py
backend/app/api/: arena.py  settings.py
backend/app/arena/: agent_state.py  context_manager.py  harness.py  llm.py  project.py  prompts.py  rag.py  reasoning.py  reasoning_graph.py  router.py  runner.py  stream_utils.py  token_utils.py  tools.py  types.py  workspace.py
backend/tests/: README.md  conftest.py  test_harness_runner.py  test_llm_factory.py  test_project_manager.py  test_prompts.py  test_rag.py  test_reasoning_graphs.py  test_reasoning_harness.py  test_registry.py  test_registry_extended.py  test_router.py  test_runner.py  test_sandbox_security.py  test_stream_utils.py  test_tool_security.py  test_validation.py
docs/: CODE_REVIEW.md  PRD.md  PROGRESS.md
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/arena/: ArenaClient.tsx  page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: AppShell.tsx  ExperimentPanel.tsx  ThemeToggle.tsx  TokenStatsPanel.tsx  TraceDiff.tsx  TraceView.tsx  WorkspacePanel.tsx
frontend/src/lib/: api.ts
scripts/: dev-backend.ps1
tests/: conftest.py  test_frontend_session_contracts.py  test_llm_overrides.py  test_project_create.py  test_prompts_context.py  test_reasoning_graph_fixes.py  test_request_size_middleware.py  test_router.py  test_stream_utils.py  test_token_utils.py  test_workspace_api.py  test_workspace_manager.py
