[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentprism-backend"
version = "0.1.0"
description = "AgentPrism 后端：Agent 框架/策略对比实验台的 FastAPI 服务"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "anthropic>=0.40.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
# 开发/测试工具：pip install -e ".[dev]"
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint]
# E/F 基础，I 导入排序，B bugbear，UP 现代语法
select = ["E", "F", "I", "B", "UP"]
# 忽略未使用的本地变量赋值（如 FastAPI 装饰器或推理图节点中预留变量）
ignore = [
    "F841",  # local variable assigned but never used
    "F821",  # undefined name (在 from __future__ import annotations 下大量误报)
    "B905",  # zip() without explicit strict= 参数
]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.pytest.ini_options]
# 让 tests 能直接 import app.*，无需安装
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
